--- a/pages/18853.html
+++ b/pages/18853.html
@@ -909,7 +909,17 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
+
+<ul>
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+history'>field history</a></p>
+</li>
+</ul>
 </li>
 
 <li>
@@ -927,6 +937,22 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/deformation+quantization'>algebraic deformation quantization</a></p>
+</li>
 </ul>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
@@ -937,10 +963,28 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observable</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/observable'>observables</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebra</a>, <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebra</a>, <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+observable'>field observable</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/local+observable'>local observables</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/polynomial+observable'>polynomial observables</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/microcausal+polynomial+observable'>microcausal observables</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebra</a>, <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebra</a>, <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a></p>
+</li>
 </ul>
 </li>
 
@@ -971,19 +1015,23 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>quantum states</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on a star-algebra</a>, <a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/cyclic+vector'>cyclic vector</a>, <a class='existingWikiWord' href='/nlab/show/separating+vector'>separating vector</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/pure+state'>pure state</a>, <a class='existingWikiWord' href='/nlab/show/pure+state'>mixed state</a>, <a class='existingWikiWord' href='/nlab/show/density+matrix'>density matrix</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quasi-free+quantum+state'>quasi-free state</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>space of quantum states</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-free+quantum+state'>quasi-free state</a>,</p>
 </li>
 
 <li>
@@ -992,20 +1040,18 @@ margin-left: 0em;
 </ul>
 </li>
 </ul>
+</li>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/picture+of+mechanics'>picture of quantum mechanics</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/free+field'>free field</a> <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a>, <a class='existingWikiWord' href='/nlab/show/Moyal+deformation+quantization'>Moyal deformation quantization</a></p>
 </li>
 
 <li>
@@ -1013,13 +1059,25 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/microcausal+functional'>microcausal functionals</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/canonical+commutation+relation'>canonical commutation relations</a>, <a class='existingWikiWord' href='/nlab/show/Weyl+relation'>Weyl relations</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal ordered product</a></p>
 </li>
 </ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fock+space'>Fock space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/interaction'>interacting</a> field <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a></p>
 </li>
 
 <li>
@@ -1031,7 +1089,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Dyson+formula'>time-ordered product</a>, <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered product</a>, <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
 </li>
 
 <li>
@@ -1041,7 +1099,33 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization+scheme'>renormalization scheme</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gell-Mann-Low+renormalization+cocycle'>Gell-Mann-Low renormalization cocycle</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+quantum+observables'>interacting field algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></li>
+</ul>
 </li>
 </ul>
 
@@ -1051,7 +1135,29 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/order-theoretic+structure+in+quantum+mechanics'>order-theoretic structure in quantum mechanics</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Alfsen-Shultz+theorem'>Alfsen-Shultz theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Harding-D%C3%B6ring-Hamhalter+theorem'>Harding-Döring-Hamhalter theorem</a></p>
+</li>
+</ul>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/Kochen-Specker+theorem'>Kochen-Specker theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bell%27s+theorem'>Bell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fell%27s+theorem'>Fell&#39;s theorem</a></p>
 </li>
 
 <li>
@@ -1061,13 +1167,29 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Wigner+theorem'>Wigner theorem</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bub-Clifton+theorem'>Bub-Clifton theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kadison-Singer+problem'>Kadison-Singer problem</a></p>
+</li>
 </ul>
 
 <h3 id='operator_algebra'>Operator algebra</h3>
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/Wick%27s+lemma'>Wick&#39;s theorem</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/Gelfand-Naimark-Segal+construction'>GNS construction</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/cyclic+vector'>cyclic vector</a>, <a class='existingWikiWord' href='/nlab/show/separating+vector'>separating vector</a></li>
+</ul>
 </li>
 
 <li>
@@ -1109,18 +1231,16 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/DHR+superselection+theory'>DHR superselection theory</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Osterwalder-Schrader+theorem'>Osterwalder-Schrader theorem</a> (<a class='existingWikiWord' href='/nlab/show/Wick+rotation'>Wick rotation</a>)</p>
+</li>
 </ul>
 
 <h3 id='perturbative_qft'>Perturbative QFT</h3>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a></li>
-</ul>
-
-<h3 id='euclidean_qft'>Euclidean QFT</h3>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Osterwalder-Schrader+theorem'>Osterwalder-Schrader theorem</a> (<a class='existingWikiWord' href='/nlab/show/Wick+rotation'>Wick rotation</a>)</li>
 </ul>
 </div>
 </div>
@@ -1136,7 +1256,7 @@ margin-left: 0em;
 
 <p>This is a “fine structure” effect not seen by the <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanics</a> of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a>, but resulting from <a class='existingWikiWord' href='/nlab/show/radiative+correction'>radiative corrections</a> involving <a class='existingWikiWord' href='/nlab/show/photon'>photon</a> emission/absorption only seen by regarding the electron in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a>, here in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a>.</p>
 
-<p>The Lamb shift may be attributed to <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>-contributions giving “<a class='existingWikiWord' href='/nlab/show/radiative+correction'>radiative corrections</a>” to the basic <a class='existingWikiWord' href='/nlab/show/loop+order'>tree level</a> vertex that describes the basic interaction of the electron with the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, hence called <em>vertex corrections</em>.</p>
+<p>The Lamb shift may be attributed to <a class='existingWikiWord' href='/nlab/show/loop+order'>1-loop</a> <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>-contributions giving “<a class='existingWikiWord' href='/nlab/show/radiative+correction'>radiative corrections</a>” to the basic <a class='existingWikiWord' href='/nlab/show/loop+order'>tree level</a> <a class='existingWikiWord' href='/nlab/show/electron-photon+interaction'>electron-photon vertex</a> that describes the basic <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> with the <a class='existingWikiWord' href='/nlab/show/background+field'>background</a> <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, hence called <em>vertex corrections</em>.</p>
 
 <p><img src='https://ncatlab.org/nlab/files/LambShiftVertexCorrections.png' width='500'/></p>
 
@@ -1197,14 +1317,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 21, 2017 05:49:15 
+  Revised on January 11, 2018 08:17:15 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.53.179)
+  (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Lamb+shift" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lamb+shift/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Lamb+shift" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lamb+shift" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Lamb+shift" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lamb+shift/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Lamb+shift" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lamb+shift" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
