--- a/pages/18926.html
+++ b/pages/18926.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -537,7 +537,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+quantum+observables'>interacting field algebra</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></li>
@@ -668,13 +668,13 @@ margin-left: 0em;
 
 <p>A <em><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></em> is <em>interacting</em> if it is not a <em><a class='existingWikiWord' href='/nlab/show/free+field+theory'>free field theory</a></em>. Just as in the discussion at <em><a class='existingWikiWord' href='/nlab/show/free+field+theory'>free field theory</a></em>, there is some room for making this precise, but at the very least it should mean that the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange</a> <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equations of motion</a> are <em>not <a class='existingWikiWord' href='/nlab/show/linear+differential+equation'>linear</a></em>.</p>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> the <a class='existingWikiWord' href='/nlab/show/observable'>algebras of observables</a> of interacting field theories are <a class='existingWikiWord' href='/nlab/show/quantization'>quantized</a> as <a class='existingWikiWord' href='/nlab/show/power+series'>formal power series</a> in <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a> and in the <a class='existingWikiWord' href='/nlab/show/coupling+constant'>coupling constant</a> (<a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a>), as a formal expansion around the quantizaton of a <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free field theory</a> (<a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a>).</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> the <a class='existingWikiWord' href='/nlab/show/observable'>algebras of observables</a> of interacting field theories are <a class='existingWikiWord' href='/nlab/show/quantization'>quantized</a> as <a class='existingWikiWord' href='/nlab/show/power+series'>formal power series</a> in <a class='existingWikiWord' href='/nlab/show/Planck%27s+constant'>Planck&#39;s constant</a> and in the <a class='existingWikiWord' href='/nlab/show/coupling+constant'>coupling constant</a> (<a class='existingWikiWord' href='/nlab/show/interacting+quantum+observables'>interacting field algebra</a>), as a formal expansion around the quantizaton of a <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free field theory</a> (<a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a>).</p>
 
-<p>To date <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> is the only way known to approach the <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a> of <a class='existingWikiWord' href='/nlab/show/interacting+field+theory'>interacting field theories</a> in <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_849d2a800a173d668a1665f892f15c9f79c6fc48_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>≥</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\geq 4</annotation></semantics></math>. In <a class='existingWikiWord' href='/nlab/show/constructive+quantum+field+theory'>constructive field theory</a> examples of <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbative</a> interacting quantum field theores in <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> 3 have been constructed and examples in dimension 2 are common, such as <a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>2d CFTs</a>.</p>
+<p>To date <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> is the only way known to approach the <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a> of <a class='existingWikiWord' href='/nlab/show/interacting+field+theory'>interacting field theories</a> in <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_26474ae375f02c97b2de99129bf0d6780ca14cc5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>≥</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>\geq 4</annotation></semantics></math>. In <a class='existingWikiWord' href='/nlab/show/constructive+quantum+field+theory'>constructive field theory</a> examples of <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbative</a> interacting quantum field theores in <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> 3 have been constructed and examples in dimension 2 are common, such as <a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>2d CFTs</a>.</p>
 
 <h2 id='examples'>Examples</h2>
 
-<p>Key examples of interacting field theories are <a class='existingWikiWord' href='/nlab/show/phi%5E4+theory'>phi^4 theory</a> (<a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field theory</a> with <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> term given by the power <math class='maruku-mathml' display='inline' id='mathml_849d2a800a173d668a1665f892f15c9f79c6fc48_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mstyle mathvariant='bold'><mi>Φ</mi></mstyle><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\mathbf{\Phi}(x))</annotation></semantics></math> of the <a class='existingWikiWord' href='/nlab/show/field+observable'>field observable</a>), <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> for <a class='existingWikiWord' href='/nlab/show/non-abelian+group'>nonabelian</a> <a class='existingWikiWord' href='/nlab/show/gauge+group'>gauge group</a> and <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>.</p>
+<p>Key examples of interacting field theories are <a class='existingWikiWord' href='/nlab/show/phi%5En+interaction'>phi^n theory</a> (<a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field theory</a> with <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> term given by the power <math class='maruku-mathml' display='inline' id='mathml_26474ae375f02c97b2de99129bf0d6780ca14cc5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mstyle mathvariant='bold'><mi>Φ</mi></mstyle><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\mathbf{\Phi}(x))</annotation></semantics></math> of the <a class='existingWikiWord' href='/nlab/show/field+observable'>field observable</a>), <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a> (with its <a class='existingWikiWord' href='/nlab/show/electron-photon+interaction'>electron-photon interaction</a>), pure <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> for <a class='existingWikiWord' href='/nlab/show/non-abelian+group'>nonabelian</a> <a class='existingWikiWord' href='/nlab/show/gauge+group'>gauge group</a>, <a class='existingWikiWord' href='/nlab/show/QCD'>quantum chromodynamics</a>, and <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>.</p>
 
 <p>The <a class='existingWikiWord' href='/nlab/show/quantization+of+Yang-Mills+theory'>quantization of Yang-Mills theory</a>, as a <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbative quantum field theory</a> is a famous open problem. Yang-Mills theory with <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian</a> <a class='existingWikiWord' href='/nlab/show/gauge+group'>gauge group</a> the <a class='existingWikiWord' href='/nlab/show/circle+group'>circle group</a> is a <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free field theory</a>, but coupled to a <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a> there is a canonical <a class='existingWikiWord' href='/nlab/show/interaction'>interaction</a> term that makes this the interacting field theory called <em><a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a></em> (QED). Similarly <a class='existingWikiWord' href='/nlab/show/QCD'>quantum chromodynamics</a> (QCD) is an interacting field theories. These interacting theories (QED, QCD with <a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs field</a>-coupling) make up the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>.</p>
 
@@ -686,7 +686,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+quantum+observables'>interacting field algebra</a></p>
 </li>
 
 <li>
@@ -699,14 +699,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  9, 2018 09:52:50 
+  Revised on January 11, 2018 08:47:23 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/interacting+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/interacting+field+theory/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/interacting+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/interacting+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/interacting+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/interacting+field+theory/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/interacting+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/interacting+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
