--- a/pages/5880.html
+++ b/pages/5880.html
@@ -1037,10 +1037,12 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#refereces'>Refereces</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The <em>photon</em> is the <a class='existingWikiWord' href='/nlab/show/gauge+boson'>gauge boson</a> of the <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, hence of <em><a class='existingWikiWord' href='/nlab/show/electromagnetic+radiation'>electromagnetic radiation</a></em> and of <em><a class='existingWikiWord' href='/nlab/show/light'>light</a></em>.</p>
+
+<p>In <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a> the photon <a class='existingWikiWord' href='/nlab/show/interaction'>interacts</a> with the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> via the <a class='existingWikiWord' href='/nlab/show/electron-photon+interaction'>electron-photon interaction</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -1052,6 +1054,22 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/laser'>laser</a>, <a class='existingWikiWord' href='/nlab/show/quantum+optics'>quantum optics</a></p>
 </li>
+</ul>
+
+<h2 id='refereces'>Refereces</h2>
+
+<p>Discussion in the context of <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a> is in</p>
+
+<ul>
+<li id='Scharf95'><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, section 3.3 of <em><a class='existingWikiWord' href='/nlab/show/Finite+Quantum+Electrodynamics+--+The+Causal+Approach'>Finite Quantum Electrodynamics -- The Causal Approach</a></em>, Berlin: Springer-Verlag, 1995, 2nd edition</li>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<p>Discussion in the context of <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a> is in</p>
+
+<ul>
+<li id='Scharf95'><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, section 3.3 of <em><a class='existingWikiWord' href='/nlab/show/Finite+Quantum+Electrodynamics+--+The+Causal+Approach'>Finite Quantum Electrodynamics -- The Causal Approach</a></em>, Berlin: Springer-Verlag, 1995, 2nd edition</li>
 </ul>
 
 <p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
@@ -1193,14 +1211,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 18, 2017 07:04:33 
+  Revised on January 11, 2018 08:46:04 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.92.170)
+  (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/photon" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/photon/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/photon" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/photon" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/photon" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/photon/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/photon" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/photon" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
