--- a/pages/9177.html
+++ b/pages/9177.html
@@ -458,6 +458,10 @@ margin-left: 0em;
 
 <p>The <em>electron</em> is one of the fundamental <a class='existingWikiWord' href='/nlab/show/particle'>particles</a>/<a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> in the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>.</p>
 
+<p>Mathematically, the electron is a <a class='existingWikiWord' href='/nlab/show/particle'>quantum</a> of a <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a>.</p>
+
+<p>In <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>quantum electrodynamics</a> the electron <a class='existingWikiWord' href='/nlab/show/interaction'>interacts</a> with the <a class='existingWikiWord' href='/nlab/show/photon'>photon</a> via the <a class='existingWikiWord' href='/nlab/show/electron-photon+interaction'>electron-photon interaction</a>.</p>
+
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
@@ -483,14 +487,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 18, 2017 09:48:43 
+  Revised on January 11, 2018 08:43:55 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.92.170)
+  (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/electron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/electron/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/electron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/electron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/electron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/electron/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/electron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/electron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
