--- a/pages/18539.html
+++ b/pages/18539.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -672,7 +672,7 @@ margin-left: 0em;
 
 <p>More abstractly, the algebra of observables is the <a class='existingWikiWord' href='/nlab/show/deformation+quantization'>formal deformation quantization</a> (specifically <a class='existingWikiWord' href='/nlab/show/Fedosov%27s+deformation+quantization'>Fedosov deformation quantization</a>) of the <a class='existingWikiWord' href='/nlab/show/interacting+field+theory'>interacting field theory</a> (<a href='#Collini16'>Collini 16</a>, <a href='#HawkinsRejzner16'>Hawkins-Rejzner 16</a>).</p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_edf8f8f4223058a915d19384f26a851de5eabd59_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_f7702b0fe8b231d3acca9b33ebbdf9ce0daa6caa_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -705,7 +705,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Dirac+interaction+picture'>interaction picture</a></p>
 </li>
 </ul>
-<table><thead><tr><th>product in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative QFT</a></th><th><math class='maruku-mathml' display='inline' id='mathml_edf8f8f4223058a915d19384f26a851de5eabd59_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,\,</annotation></semantics></math> induces</th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal-ordered product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a> (<a class='existingWikiWord' href='/nlab/show/free+field'>free field</a> <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a>)</td></tr>
+<table><thead><tr><th>product in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative QFT</a></th><th><math class='maruku-mathml' display='inline' id='mathml_f7702b0fe8b231d3acca9b33ebbdf9ce0daa6caa_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,\,</annotation></semantics></math> induces</th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal-ordered product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a> (<a class='existingWikiWord' href='/nlab/show/free+field'>free field</a> <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a>)</td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/time-ordered+product'>time-ordered product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a> (<a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitudes</a>)</td></tr>
 <tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/retarded+product'>retarded product</a></td><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra+of+observables'>interacting quantum observables</a></td></tr>
 </tbody></table>
@@ -774,14 +774,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 12, 2018 15:55:02 
+  Revised on January 12, 2018 18:16:15 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (178.9.124.30)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/interacting+field+algebra+of+observables" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/interacting+field+algebra+of+observables/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/interacting+field+algebra+of+observables" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/interacting+field+algebra+of+observables" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/interacting+field+algebra+of+observables" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/interacting+field+algebra+of+observables/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/interacting+field+algebra+of+observables" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/interacting+field+algebra+of+observables" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
